fixed display bug of menu items on firefox

--- a/assets/css/alvis.css
+++ b/assets/css/alvis.css
@@ -10,12 +10,12 @@
 header {
     height: 120px;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     padding-left: 30px;
     padding-right: 30px;
     background-color: var(--color-primary);
     border: solid var(--color-secondary) 1px;
-    font-family: sans-serif;
+    font-family: arial;
 }
 
 #header-title {
@@ -43,12 +43,12 @@ header {
 
 .menu-item {
     padding-top: 10px;
-    padding-bottom: 8px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 30px;
+    padding-bottom: 4px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 20px;
     float: left;
-    width: 120px;
+    width: 140px;
     text-align: center;
     border-left-style: solid;
     border-right-style: solid;
